# pico-fido

./: CMakeLists.txt  README.md
docs/: USER_MANUAL_RU.md
src/fido/: CMakeLists.txt  bip39.c  bip39.h  cbor_client_pin.c  cbor_config.c  cbor_get_assertion.c  cbor_get_info.c  cbor_make_credential.c  cbor_selection.c  cbor_vendor.c  ctap.h  fido.c  oath.c
tests/pico-fido/: test_037_minpinlength.py
